--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "sass": "^1.78.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,6 +52,8 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "babel-loader": "^9.1.3",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^16.0.1",
     "typescript": "^4.9.5"
   }
 }
